[project]
name = "wakepy"
dynamic = ["version"]
description = "wakelock / keep-awake / stay-awake"
authors = [
    {name = "Niko Föhr", email = "fohrloop@gmail.com"},
]

# wakepy does not have any required python dependencies
# For using dbus-based methods, install a supported dbus package or `dbus`
# extras;  pip install wakepy[dbus]
dependencies = []

# Python 3.7 introduces from __future__ import annotations
requires-python = ">=3.7"
readme = "README.md"
license = { file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.optional-dependencies]
doc = [
    "sphinx~=5.0",
    "sphinx_design~=0.4.1",
    "sphinx-copybutton~=0.5.2",
    "myst-parser~=1.0.0",
    "furo",
]
dev = [
    "sphinx-autobuild",
    "IPython",
    "black==23.3.0",
    "pytest",
    "coverage",
    "mypy==1.3.0",
    "tox==4.6.0",
    "isort==5.12.0",
    "ruff==0.0.270",
    # Jeepney is used in the integration tests for creating a D-Bus server
    "jeepney >= 0.7.1;sys_platform=='linux'"
]
dbus = [
    # Install this with `pip install wakepy[dbus]` if you wnat to use the 
    # D-Bus based methods 
    "jeepney >= 0.7.1;sys_platform=='linux'"
]

[project.urls]
Homepage = "https://github.com/fohrloop/wakepy"
"Source Code" = "https://github.com/fohrloop/wakepy"
"Issue Tracker" = "https://github.com/fohrloop/wakepy/issues"

[project.scripts]
wakepy = "wakepy.__main__:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = 'jeepney.*'
ignore_missing_imports = true


[tool.pytest.ini_options]
filterwarnings = "ignore:.*is deprecated in wakepy 0.7.0 and will be removed in a future version of wakepy.*:DeprecationWarning"

[tool.isort]
profile = "black"

[tool.ruff]
# Same as Black.
line-length = 88

target-version = "py310"

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

fix = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    ".venv",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
