[project]
name = "wakepy"
dynamic = ["version"]
description = "wakelock / keep-awake / stay-awake"
authors = [
    {name = "Niko Föhr", email = "fohrloop@gmail.com"},
]
dependencies = [
    # For using the D-Bus based methods
    "jeepney >= 0.7.1;sys_platform=='linux'"
]

# Python 3.7 introduces from __future__ import annotations
requires-python = ">=3.7"
readme = "README.md"
license = { file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.optional-dependencies]
doc = [
    "sphinx~=7.0",
    "sphinx_design>0.4.1",
    "sphinx-copybutton~=0.5.2",
    "myst-parser~=2.0.0",
    "sphinx-book-theme~=1.1.0",
    # a numpydoc 1.7.0rc0.dev0. This one has https://github.com/numpy/numpydoc/pull/527 merged
    # At some point: Can use 1.7.0 (which is not available in PyPI at the time of writing)
    "numpydoc @ git+https://github.com/numpy/numpydoc.git@46f532a824639a97479039fc122533915cdfa10f"
]
dev = [
    "sphinx-autobuild",
    "time-machine",
    "IPython",
    "black==23.3.0",
    "pytest",
    "pytest-cov",
    "mypy==1.3.0",
    "tox==4.6.0",
    "isort==5.12.0",
    "ruff==0.3.2",
    # Jeepney is used in the integration tests for creating a D-Bus server
    "jeepney >= 0.7.1;sys_platform=='linux'"
]

[project.urls]
Homepage = "https://github.com/fohrloop/wakepy"
"Source Code" = "https://github.com/fohrloop/wakepy"
"Issue Tracker" = "https://github.com/fohrloop/wakepy/issues"

[project.scripts]
wakepy = "wakepy.__main__:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = 'jeepney.*'
ignore_missing_imports = true


[tool.pytest.ini_options]
filterwarnings = "ignore:.*is deprecated in wakepy 0.7.0 and will be removed in a future version of wakepy.*:DeprecationWarning"

[tool.isort]
profile = "black"

[tool.ruff]
# Same as Black.
line-length = 88
fix = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# W505: doc-line-too-lon. Ref: https://docs.astral.sh/ruff/rules/doc-line-too-long/
select = ["E", "F", "W505"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pycodestyle]
# limits docstring and comments to 79 characters.
max-doc-length = 79
